Change profile page and homepage styling and improve performance, remove unused buttons on study set page,

--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -13,27 +13,27 @@
       You haven't created any sets yet.
       <a [routerLink]="['/create/set']">Create your first one.</a>
     </div>
-    <a
+    <div
       *ngFor="let set of user.sets"
-      [routerLink]="['/study-set', set.id]"
-      class="text-decoration-none"
     >
       <div class="col">
-        <div class="card shadow set-card" role="button">
-          <div class="card-body">
-            <h5 class="card-title">
-              {{ set.title }}
-              <fa-icon
-                *ngIf="set.private"
-                [icon]="['far', 'eye-slash']"
-              ></fa-icon>
-            </h5>
-            <h6 class="card-subtitle text-muted">
-              Last updated on {{ set.updatedAt.toLocaleString('en-us', { month:'short', day: 'numeric', year:'numeric'} ) }}
-            </h6>
-          </div>
+        <div class="card shadow-sm set-card" role="button">
+          <a [routerLink]="['/study-set', set.id]" class="text-decoration-none">
+            <div class="card-body">
+              <h5 class="card-title">
+                {{ set.title }}
+                <fa-icon
+                  *ngIf="set.private"
+                  [icon]="['far', 'eye-slash']"
+                ></fa-icon>
+              </h5>
+              <h6 class="card-subtitle text-muted">
+                Last updated on {{ set.updatedAt.toLocaleString('en-us', { month:'short', day: 'numeric', year:'numeric'}) }}
+              </h6>
+            </div>
+          </a>
         </div>
       </div>
-    </a>
+    </div>
   </div>
 </div>
