Add tabbing functionality between term and definition editors and new Dockerfile

--- a/apps/front/src/app/shared/card/card.component.html
+++ b/apps/front/src/app/shared/card/card.component.html
@@ -39,7 +39,7 @@
           <p class="fs-2">Term</p>
           <quill-editor [(ngModel)]="termValue" id="termEditor" class="w-100"></quill-editor>
         </div>
-        <div class="col mt-4 mt-lg-0">
+        <div class="col mt-4 mt-md-0">
           <p class="fs-2 pull-right">Definition</p>
           <quill-editor [(ngModel)]="definitionValue" id="definitionEditor" class="w-100"></quill-editor>
         </div>
