Add spinner for quiz page

--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.scss
@@ -8,6 +8,11 @@
   margin-top: 2vh;
 }
 
+.spinner-border {
+  width: 6rem;
+  height: 6rem;
+}
+
 @media only screen and (min-device-width : 768px) and (max-device-width : 7680px) {
   .quiz {
     width: 75%;
