--- a/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
+++ b/apps/front/src/app/study-set/study-set-quiz/study-set-quiz.component.html
@@ -1,4 +1,10 @@
-<div class="d-flex flex-column justify-content-center align-items-center configuration" *ngIf="!created">
+<div class="d-flex justify-content-center mt-5" #spinner>
+  <div class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+
+<div class="d-flex flex-column justify-content-center align-items-center configuration" #container *ngIf="!created && loaded" hidden>
   <div class="card shadow-sm">
     <div class="card-body">
       <h2>
