Initial functionality of saving incomplete study sets locally in the browser

--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -142,7 +142,7 @@
           </button>
           <button
             type="button"
-            class="btn btn-primary ms-4 shadow"
+            class="btn btn-primary ms-4 shadow-sm"
             (click)="this.modalRef = registerModal.open()"
           >
             Sign up
