--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -14,13 +14,13 @@
             There was an error encountered while creating your study set. Open your browser's development console to save the error information and <a href="https://github.com/hwgilbert16/scholarsome/issues">open an issue</a> for assistance.
           </div>
           <div class="my-3">
-            <input type="text" class="form-control" placeholder="Enter a title for your study set..." maxlength="255" #title>
+            <input type="text" class="form-control" placeholder="Enter a title for your study set..." maxlength="255" (change)="saveProgress()" [(ngModel)]="title" #titleElement>
           </div>
           <div class="mb-3">
-            <textarea class="form-control" placeholder="Add a description..." #description></textarea>
+            <textarea class="form-control" placeholder="Add a description..." (change)="saveProgress()" [(ngModel)]="description" #descriptionElement></textarea>
           </div>
           <div class="mb-2 form-check">
-            <input type="checkbox" class="form-check-input" id="privateCheck" #privateCheck>
+            <input type="checkbox" class="form-check-input" id="privateCheck" (change)="saveProgress()" [(ngModel)]="privateCheck">
             <label class="form-check-label" for="privateCheck">Viewable only to me</label>
           </div>
         </div>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="row mx-3">
-        <ng-template #cardList></ng-template>
+        <ng-template #cardContainer></ng-template>
       </div>
       <div class="row mx-4">
         <div class="card my-3 bg-white">
@@ -52,3 +52,18 @@
   </div>
 
 </fieldset>
+
+<ng-template #restoreProgressModal>
+  <div class="modal-body">
+    <div class="fs-2 mb-3 fw-semibold">Do you want to restore your progress?</div>
+
+    <div class="alert alert-danger" role="alert">
+      By clicking no, the set you were previously creating, but had not yet created, will be deleted.
+    </div>
+
+    <div class="mb-3 d-flex justify-content-between">
+      <button type="button" class="btn btn-success" (click)="modalRef?.hide(); restoreProgress()">Yes, restore</button>
+      <button type="button" class="btn btn-danger" (click)="modalRef?.hide(); deleteProgress()">No, start over</button>
+    </div>
+  </div>
+</ng-template>
