Add non-media supported set to apkg logic

--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -7,6 +7,9 @@
       </h2>
       <button type="submit" class="btn btn-primary" (click)="createSet()">Create</button>
     </div>
+    <div class="create-header">
+      <p class="text-secondary">Your progress will be saved, even if you reload or close the browser.</p>
+    </div>
     <div class="container-fluid mt-3">
       <div class="row mx-md-4">
         <div class="col">
