--- a/apps/front/src/app/study-set/study-set.component.scss
+++ b/apps/front/src/app/study-set/study-set.component.scss
@@ -12,6 +12,10 @@
   border-color: #8438ff !important;
 }
 
+.dropdown-item {
+  cursor: pointer;
+}
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   .set-view {
     width: 100%;
