--- a/apps/front/src/app/study-set/study-set.component.html
+++ b/apps/front/src/app/study-set/study-set.component.html
@@ -34,8 +34,8 @@
             Export
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" (click)="exportSet()">Anki</a></li>
-<!--            <li><a class="dropdown-item" (click)="exportSet('quizlet')">Quizlet</a></li>-->
+            <li><a class="dropdown-item" (click)="convertSetToApkg()">Anki</a></li>
+            <li><a class="dropdown-item" (click)="this.quizletExportModal.open(set)">Quizlet</a></li>
           </ul>
         </div>
         <button type="submit" class="btn btn-primary" [hidden]="isEditing || !userIsAuthor" (click)="editCards()">Edit</button>
@@ -92,3 +92,5 @@
     </div>
   </div>
 </div>
+
+<scholarsome-quizlet-export-modal #quizletExportModal></scholarsome-quizlet-export-modal>
