--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -33,6 +33,10 @@ textarea {
   resize: none;
 }
 
+.github:hover {
+  color: #8438ff !important;
+}
+
 .modal-open {
   overflow: hidden !important;
   overflow-y: inherit !important;
