--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -1,22 +1,75 @@
-<div class="background">
-  <div class="login-desktop mt-3 me-3">
-    <button class="btn btn-lg btn-outline-light me-2" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>
-    <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><button class="btn btn-lg btn-outline-light" aria-label="GitHub link"><fa-icon [icon]="faGithub"></fa-icon></button></a>
-  </div>
-  <img class="logo" src="assets/header/scholarsome-logo-purple-lowercase.svg" alt="Scholarsome">
-  <div class="container-fluid">
-    <div class="row row-cols-1 row-cols-md-2 align-items-center">
-      <div class="col mt-lg-0 mt-4">
-        <h1 class="display-2 fw-bold">Studying done the <span class="text-decoration-underline">correct</span> way</h1>
-        <p class="display-6 subheader">No monthly fees or upsells to get between you and your study tools. Just flashcards.</p>
-        <div class="d-flex gap-2">
-          <button class="btn btn-lg btn-primary mt-4" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
-          <button class="btn btn-lg btn-outline-primary mt-4 mobile" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>
-          <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="mobile"><button class="btn btn-lg btn-outline-primary mt-4" aria-label="GitHub link"><fa-icon [icon]="faGithub"></fa-icon></button></a>
+<!--<div class="background">-->
+<!--  <div class="login-desktop mt-3 me-3">-->
+<!--    <button class="btn btn-lg btn-outline-light me-2" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>-->
+<!--    <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><button class="btn btn-lg btn-outline-light" aria-label="GitHub link"><fa-icon [icon]="faGithub"></fa-icon></button></a>-->
+<!--  </div>-->
+<!--  <img class="logo" src="assets/header/scholarsome-logo-purple-lowercase.svg" alt="Scholarsome">-->
+<!--  <div class="container-fluid">-->
+<!--    <div class="row row-cols-1 row-cols-md-2 align-items-center">-->
+<!--      <div class="col mt-lg-0 mt-4">-->
+<!--        <h1 class="display-2 fw-bold">Studying done the <span class="text-decoration-underline">correct</span> way</h1>-->
+<!--        <p class="display-6 subheader">No monthly fees or upsells to get between you and your study tools. Just flashcards.</p>-->
+<!--        <div class="d-flex gap-2">-->
+<!--          <button class="btn btn-lg btn-primary mt-4" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>-->
+<!--          <button class="btn btn-lg btn-outline-primary mt-4 mobile" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>-->
+<!--          <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="mobile"><button class="btn btn-lg btn-outline-primary mt-4" aria-label="GitHub link"><fa-icon [icon]="faGithub"></fa-icon></button></a>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col">-->
+<!--        <img src="assets/landing/showcase.png" class="showcase shadow-lg mt-lg-0 mt-4" />-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<nav class="navbar fixed-top navbar-expand-lg bg-opacity-75">
+  <div class="container-fluid navbar-container">
+    <a class="navbar-brand" href="#">
+      <img src="assets/header/scholarsome-logo-purple-lowercase.svg" width="80%" height="80%" alt="Logo" class="d-inline-block align-text-top">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
+      <div class="navbar-nav gap-3">
+        <a class="nav-link fs-5" href="#">Documentation</a>
+        <a class="nav-link fs-5" href="#">Discord <fa-icon [icon]="faUpRightFromSquare"></fa-icon></a>
+      </div>
+      <div class="navbar-nav ms-auto mt-3 mt-md-0">
+        <a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="d-flex align-items-center text-decoration-none text-black">
+          <div class="fs-6 me-4 mb-2 mb-md-0 github">
+            <fa-icon [icon]="faGithub"></fa-icon>&nbsp;&nbsp;{{stargazers}} stars
+          </div>
+        </a>
+        <div>
+          <button class="btn fs-6 btn-outline-primary me-lg-3 me-2" (click)="this.modalService.modal.next('login-open')" aria-label="Log in">Log in</button>
+          <button class="btn fs-6 btn-primary" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
         </div>
       </div>
-      <div class="col">
-        <img src="assets/landing/showcase.png" class="showcase shadow-lg mt-lg-0 mt-4" />
+    </div>
+  </div>
+</nav>
+
+<div class="main-screen d-flex align-items-center">
+  <div class="container-fluid text-center main-screen-content">
+    <div class="row justify-content-center">
+      <div class="col-lg-8">
+        <h1 class="display-2 fw-bold">Interactive and open source flashcard studying <span class="text-primary">for the masses</span></h1>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+        <h1 class="display-6">Shed the shackles of paying a monthly subscription for your learning. Switch to the better alternative.</h1>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+      <div class="col-lg-6">
+        <button class="btn btn-lg fs-4 btn-primary" (click)="this.modalService.modal.next('register-open')" aria-label="Sign up">Sign up for free</button>
+      </div>
+    </div>
+    <div class="showcase-row row justify-content-center">
+      <div class="col-lg-6 col-sm-10">
+        <img class="showcase-image" src="assets/landing/showcase.png">
       </div>
     </div>
   </div>
