--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -22,7 +22,7 @@
 <!--  </div>-->
 <!--</div>-->
 
-<nav class="navbar fixed-top navbar-expand-lg bg-opacity-75">
+<nav class="navbar fixed-top navbar-expand-xxl bg-white">
   <div class="container-fluid navbar-container">
     <a class="navbar-brand" href="#">
       <img src="assets/header/scholarsome-logo-purple-lowercase.svg" width="80%" height="80%" alt="Logo" class="d-inline-block align-text-top">
@@ -30,7 +30,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse bg-white" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav gap-3">
         <a class="nav-link fs-5" href="#">Documentation</a>
         <a class="nav-link fs-5" href="#">Discord <fa-icon [icon]="faUpRightFromSquare"></fa-icon></a>
@@ -50,7 +50,7 @@
   </div>
 </nav>
 
-<div class="main-screen d-flex align-items-center">
+<div class="main-screen d-flex align-items-center min-vh-100">
   <div class="container-fluid text-center main-screen-content">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -68,8 +68,101 @@
       </div>
     </div>
     <div class="showcase-row row justify-content-center">
-      <div class="col-lg-6 col-sm-10">
-        <img class="showcase-image" src="assets/landing/showcase.png">
+      <div class="col-lg-9 col-xl-6 col-sm-10 col-">
+        <img class="showcase-image" src="assets/landing/showcase.webp">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section-1 d-flex align-items-center as-seen-on">
+  <div class="container-fluid text-center">
+    <div class="row justify-content-center">
+      <div class="col-sm-4 col-md-10 col-lg-10 col-xl-5">
+        <p class="fs-6">AS SEEN ON</p>
+        <img src="assets/landing/hackernews.webp" class="w-25">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section-2">
+  <div class="container-fluid section-2-container">
+    <div class="row justify-content-center align-items-center">
+      <div class="col col-xl-5 mt-5">
+        <h2 class="display-3 fw-bold text-white mb-5">The way studying is meant to be</h2>
+        <p class="fs-4 text-white mt-5">Scholarsome is your all-encompassing learning platform. Create study sets, import data from other platforms, take generated practice quizzes to test your knowledge, and much more. It's accessible from any device in a centralized, easy-to-use, web-based location.</p>
+      </div>
+      <div class="col col-xl-6 col-md-6 col-12">
+        <div class="d-flex justify-content-center">
+          <img src="assets/landing/section2_laptop.webp" class="section-2-laptop">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="section-3">
+  <div class="container-fluid section-3-container">
+    <div class="row justify-content-center">
+      <div class="col-xl-5 text-center">
+        <h2 class="display-3 fw-bold text-primary mt-5">Make your studying easy</h2>
+        <p class="fs-3">With Scholarsome's tools at your disposal, you can go back to focusing on what matters: learning your sets efficiently.</p>
+      </div>
+    </div>
+    <div class="section-3-features">
+      <div class="row justify-content-center align-items-center mt-5">
+        <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
+          <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image">
+        </div>
+        <div class="col-lg-5">
+          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Create randomized practice quizzes</h3>
+          <p class="fs-5">Using the cards created in your sets, you can generate randomized quizzes to practice. Choose from a mixture of multiple choice, written, and true or false questions, depending on what the content of your set is best suited to.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center mt-4">
+        <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
+          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Import and export to other platforms with ease</h3>
+          <p class="fs-5">Sets can be easily imported into Scholarsome from a variety of other platforms - Quizlet, Anki, and importing from a CSV file. Plus, Scholarsome doesn't lock your data down. You're free to easily export your set data to those same platforms.</p>
+        </div>
+        <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
+          <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image">
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center mt-4">
+        <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
+          <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image">
+        </div>
+        <div class="col-lg-5">
+          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Use flashcards to enhance your memory</h3>
+          <p class="fs-5">The cards created in your sets can be used in a familiar interface to study in the same way that you would with physical flashcards. Flip cards over, swap back and forth between them, and circle back to ones that you missed — all with convenient keybinds for long study sessions.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center align-items-center mt-4 mb-5">
+        <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
+          <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Feature-rich card editor</h3>
+          <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
+        </div>
+        <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
+          <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image">
+        </div>
+      </div>
+      <div class="row justify-content-center text-center mt-5">
+        <h2 class="display-3 fw-bold">And even more, coming soon</h2>
+      </div>
+      <div class="row justify-content-center align-items-center mt-4 gap-5">
+        <div class="col col-xl-2 bg-white rounded">
+          <h4 class="fs-1 fw-semibold">LaTex Support</h4>
+        </div>
+        <div class="col col-xl-2 bg-white rounded">
+          <h4 class="fs-1 fw-semibold">Spaced Repetition</h4>
+        </div>
+        <div class="col col-xl-2 bg-white rounded">
+          <h4 class="fs-1 fw-semibold">Study Games</h4>
+        </div>
+        <div class="col col-xl-2 bg-white rounded">
+          <h4 class="fs-1 fw-semibold">Study Games</h4>
+        </div>
       </div>
     </div>
   </div>
