Add coming soon and open source section to landing

--- a/apps/front/src/app/landing/landing.component.html
+++ b/apps/front/src/app/landing/landing.component.html
@@ -113,7 +113,7 @@
     <div class="section-3-features">
       <div class="row justify-content-center align-items-center mt-5">
         <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-          <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image">
+          <img src="assets/landing/section-3-feature-1.png" class="section-3-feature-image shadow-sm">
         </div>
         <div class="col-lg-5">
           <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Create randomized practice quizzes</h3>
@@ -126,44 +126,60 @@
           <p class="fs-5">Sets can be easily imported into Scholarsome from a variety of other platforms - Quizlet, Anki, and importing from a CSV file. Plus, Scholarsome doesn't lock your data down. You're free to easily export your set data to those same platforms.</p>
         </div>
         <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-          <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image">
+          <img src="assets/landing/section-3-feature-2.png" class="section-3-feature-image shadow-sm">
         </div>
       </div>
       <div class="row justify-content-center align-items-center mt-4">
         <div class="col-lg-7 col-sm-12 text-sm-center text-lg-start text-xl-start">
-          <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image">
+          <img src="assets/landing/section-3-feature-3.png" class="section-3-feature-image shadow-sm">
         </div>
         <div class="col-lg-5">
           <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Use flashcards to enhance your memory</h3>
           <p class="fs-5">The cards created in your sets can be used in a familiar interface to study in the same way that you would with physical flashcards. Flip cards over, swap back and forth between them, and circle back to ones that you missed — all with convenient keybinds for long study sessions.</p>
         </div>
       </div>
-      <div class="row justify-content-center align-items-center mt-4 mb-5">
+      <div class="row justify-content-center align-items-center mt-4">
         <div class="col-lg-5 order-sm-1 order-1 order-xl-0 order-lg-0">
           <h3 class="display-5 fw-bold mt-3 mt-xl-0 mt-lg-0">Feature-rich card editor</h3>
           <p class="fs-5">Each side of a card can be customized to your heart's content. Add multiple images, change the formatting of text, use code blocks, and much more.</p>
         </div>
         <div class="col-lg-7 col-sm-12 text-lg-end text-xl-end text-sm-center order-0 order-xl-1 order-lg-1">
-          <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image">
+          <img src="assets/landing/section-3-feature-4.png" class="section-3-feature-image shadow-sm">
         </div>
       </div>
-      <div class="row justify-content-center text-center mt-5">
+    </div>
+  </div>
+</div>
+
+<div class="section-4">
+  <div class="container-fluid">
+    <div class="section-4-content pt-5">
+      <div class="row justify-content-center text-center pt-5">
         <h2 class="display-3 fw-bold">And even more, coming soon</h2>
       </div>
-      <div class="row justify-content-center align-items-center mt-4 gap-5">
-        <div class="col col-xl-2 bg-white rounded">
-          <h4 class="fs-1 fw-semibold">LaTex Support</h4>
+      <div class="row row-cols-1 row-cols-md-3 justify-content-center mt-4 gap-3">
+        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+          <h4 class="fs-2 fw-semibold">LaTex Support</h4>
+          <p class="fs-5">Use LaTex code to create beautiful mathematical expressions in your cards.</p>
         </div>
-        <div class="col col-xl-2 bg-white rounded">
-          <h4 class="fs-1 fw-semibold">Spaced Repetition</h4>
+        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+          <h4 class="fs-2 fw-semibold">Spaced Repetition</h4>
+          <p class="fs-5">Learn large sets over time by using psychology-proven methods to improve learning efficiency.</p>
         </div>
-        <div class="col col-xl-2 bg-white rounded">
-          <h4 class="fs-1 fw-semibold">Study Games</h4>
-        </div>
-        <div class="col col-xl-2 bg-white rounded">
-          <h4 class="fs-1 fw-semibold">Study Games</h4>
+        <div class="col col-md-3 bg-white rounded shadow-sm py-3">
+          <h4 class="fs-2 fw-semibold">Study Games</h4>
+          <p class="fs-5">Play games that are both fun and test your memory of your sets.</p>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="section-5 mt-5">
+  <div class="d-flex justify-content-center mt">
+    <div class="section-5-rectangle round text-center">
+      <h2 class="text-white display-3 fw-bold mt-3">We're open-source, too</h2>
+      <p class="fs-4 text-white section-5-tagline mt-3">Scholarsome is proud to be released under the AGPL-3.0 license. With the help of our detailed documentation, you can easily get a fully-functional local instance running using Docker.</p>
     </div>
   </div>
 </div>
